--- a/acmesil/package.json
+++ b/acmesil/package.json
@@ -14,7 +14,8 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
-    "react-tap-event-plugin": "^3.0.3"
+    "react-tap-event-plugin": "^3.0.3",
+    "recharts": "^1.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
